--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
-<head>table</head>
+<html lang="en">
+<head>
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-<table border=3 bordercolor="blue" align="center">
-    <th colspan = 14>ABCD</th>
-    <tr>
-        <th colspan = 4>NAME</th>
-        <th colspan = 4>EMAIL</th>
-        <th colspan = 4>PHOTO</th>
-    </tr>
-    <tr>
-        <td colspan = 4>Aarohi</th>
-        <td colspan = 4>Aarohi123@gmail.com</th>
-        <td colspan = 4><img src="https://i.pinimg.com/originals/a7/3d/6e/a73d6e4ac85c6a822841e449b24c78e1.jpg" alt="" border=2 height=100 width=100></img></td>
-    </tr>
-    <tr>
-        <td colspan = 4>shweta</td>
-        <td colspan = 4>shweta2676@gmail.com</td>
-        <td colspan = 4><img src="https://wallpaperaccess.com/full/2340965.jpg" alt="" border=2 height=100 width=100></img></td>
-    </tr>
-    <tr>
-        <td colspan = 4>Arnav</td>
-        <td colspan = 4>Arnavsharma267@gmail.com</td>
-        <td colspan = 4><img src=https://www.marshallsindia.com/images/younique/nature/nature-cover-slider-6.jpg"" alt="" border=2 height=100 width=100></img></td>
-    </tr>
-    </table>
- </body>
-
+     <div class="hero"> 
+         <div class="nav"> 
+           <h2 class="logo"><span>portfolio</span> </h2>
+           <ul>
+              <li><a href="#" class="btn">Home</a></li>
+              <li><a href="#" class="btn">Projects</a></li>
+              <li><a href="#" class="btn">Skills</a></li>
+              <li><a href="#" class="btn">Contact</a></li>
+              <a href="#" class="btn"> Subscribe</a>
+           </ul>
+        </div>
+        <div class="content">
+            <h4> Hello, my name is</h4>
+            <h1>swati <span>vishwakarma</span></h1>
+            <h3>I am a student</h3>
+            <div class="newsletter">
+               <form>
+                <input type="email" name="email" id="mail" placeholder="Enter your email">
+                <input type="submit" name="submit" value="Submit">
+                </form>
+            </div>
+          </div>
+          <footer>
+          <a href="#" class="fa fa-facebook"></a>
+           <a href="#" class="fa fa-twitter"></a>
+        </footer>
+           </div>
+          </body>
+</html>
